# realtimebattle

./: .cvsignore  Arena.cc  Arena.h  Error.cc  Error.h  Extras.cc  Makefile  Makefile.am  Makefile.rpm  Makefile.rtb  MovingObject.cc  MovingObject.h  Options.cc  Options.h  RealTimeBattle.cc  RealTimeBattle.spec  Shape.cc  Shape.h  StartTournament.cc  Statistics.cc  String.cc  String.h  VERSION  Various.cc  Various.h  Vector2D.cc  Vector2D.h  acconfig.h  aclocal.m4  autogen.sh  config.h.in  configure.in  gui.c  gui.cc  gui.h  messagetypes.h  robot.cc  robot.h  robotarena.cc  tournament.txt
Arenas/: Circle.arena  Circles.arena  Cross.arena  Diamond.arena  Flower.arena  Forest.arena  Labyrinth.arena  Makefile.am  Original.arena  Rooms.arena  Square.arena  Star.arena  Triangle.arena
Documentation/: ArenaConstruction.udo  BUGS.sgml  CVS-Help.sgml  ChangeLog.sgml  FAQ.sgml  GadgetSpec.txt  INSTALL.sgml  Introduction.udo  Introduction.yo  Makefile  Makefile.am  NEWS.sgml  Net.txt  Options.udo  README.sgml  RealTimeBattle.sgml  RealTimeBattle.udo  RealTimeBattle.yo  RobotConstruction.udo  Structure.udo  TODO.sgml  Usage.udo  latex2dvi
Documentation/Spanish/: Makefile  rtb-docs-1.0.5-es.sgml
Robots/: Makefile  Makefile.am  empty.c  fire.cc  thomas2.cc  thomastest.cc
Robots/empty/: Makefile  Makefile.am  Makefile.rtb  empty.c
Robots/rotate_and_fire/: .cvsignore  Makefile  Makefile.am  Makefile.rtb  rotate_and_fire.cc  rotate_and_fire.h  rotate_and_fire_blocking.cc  rotate_and_fire_select.cc  rotate_and_fire_signal.cc
Robots/seek_and_destroy/: Makefile  Makefile.am  Makefile.rtb  seek_and_destroy.cc
config/: acinclude.m4
intl/: .cvsignore
po/: .cvsignore  ChangeLog  Makefile.in.in  POTFILES.in  RealTimeBattle.pot  cat-id-tbl.c  de.po  es.po  fr.po  gl.po  ja.po  pl.po  pt.po  sv.po
rtb-team-framework/: acinclude.m4  common.h  initcomponents.cpp  initcomponents.h  initexceptions.cpp  main.cpp  stdnamespace.h
rtb-team-framework/exceptions/: confignotloadedexception.cpp  confignotloadedexception.h  configurationparserexception.cpp  configurationparserexception.h  exceptionsnamespace.h  ioexception.cpp  ioexception.h  keynotfoundexception.cpp  keynotfoundexception.h  parserexception.cpp  parserexception.h  resourcenotfoundexception.cpp  resourcenotfoundexception.h  rtbexception.cpp  rtbexception.h  serverispresentexception.cpp  serverispresentexception.h  strategyexception.cpp  strategyexception.h
rtb-team-framework/gamecontrol/: clientcoordinator.cpp  clientcoordinator.h  clientgamecontroller.cpp  clientgamecontroller.h  coordinator.h  coordinatorcomposite.cpp  coordinatorcomposite.h  coordinatorleaf.cpp  coordinatorleaf.h  gamecontroller.h  gamecontrolnamespace.h  gameoptionsrepository.h  servercoordinator.cpp  servercoordinator.h  servergamecontroller.cpp  (+1 more)
src/: .cvsignore  Arena.cc  Arena.h  ArenaBase.cc  ArenaBase.h  ArenaController.cc  ArenaController.h  ArenaObjectCollector.h  ArenaRealTime.cc  ArenaRealTime.h  ArenaReplay.cc  ArenaReplay.h  ArenaWindow.cc  ArenaWindow.h  Arena_Base.cc  Arena_Base.h  Arena_Controller.cc  Arena_Controller.h  Arena_RealTime.cc  Arena_RealTime.h  Arena_Replay.cc  Arena_Replay.h  Console.cc  Console.h  ControlWindow.cc  ControlWindow.h  Dialog.cc  Dialog.h  Doxyfile  Error.cc  Error.h  Event.h  EventGT.cc  EventGT.h  EventHandler.cc  EventHandler.h  EventRT.cc  EventRT.h  Explosion.cc  Explosion.h  (+85 more)
src/Common/: Explosion.h  Process.cc  Process.h
src/Core/: Arena.cc  Arena.h  EventGT.cc  EventHandler.cc  EventRT.cc  Makefile.am  RealTimeBattle.cc  Robot.cc  Robot.h  Shot.cc  Shot.h  Tournament.cc  Tournament.h
src/Gadgets/: AllGadgets.cc  AllGadgets.h  ArenaGadget.h  CommunicationGadget.cc  CommunicationGadget.h  DefenseGadget.cc  DefenseGadget.h  EngineGadget.cc  EngineGadget.h  EnvironmentGadget.cc  EnvironmentGadget.h  ExplosionGadget.cc  ExplosionGadget.h  Function.h  Gadget.cc  Gadget.h  GadgetSet.cc  GadgetSet.h  GeometryGadget.cc  GeometryGadget.h  Makefile.am  RobotBodyGadget.cc  RobotBodyGadget.h  Script.cc  Script.h  SensorGadget.cc  SensorGadget.h  ShotGadget.cc  ShotGadget.h  Value.cc  Value.h  Variable.cc  Variable.h  WallGadget.cc  WallGadget.h  WeaponGadget.cc  WeaponGadget.h
src/Gui/: Makefile.am
src/Gui/Gtk/: .cvsignore  ArenaDisplay.cc  ArenaDisplay.h  ArenaWindow.cc  ArenaWindow.h  ControlWindow.cc  ControlWindow.h  Dialog.cc  Dialog.h  DrawingObjects.cc  DrawingObjects.h  FileSelector.h  Gui.cc  Gui.h  GuiStructs.cc  GuiStructs.h  GuiVarious.cc  GuiVarious.h  Makefile.am  MessageWindow.cc  MessageWindow.h  OptionsWindow.cc  OptionsWindow.h  ScoreWindow.cc  ScoreWindow.h  StartTournamentWindow.cc  StartTournamentWindow.h  StatisticsWindow.cc  StatisticsWindow.h  Window.cc  Window.h
src/Gui/none/: .cvsignore  Gui.cc  Makefile.am
src/Network/: .cvsignore  Client.cc  Makefile.am  NetConnection.cc  NetConnection.h  Packets.cc  Packets.h  Server.cc  ServerPackets.cc  ServerPackets.h  ServerSocket.cc  ServerSocket.h  SimpleProcess.cc  SimpleProcess.h  Socklib.c  Socklib.h  TournamentAgreementPackets.cc  TournamentAgreementPackets.h  TournamentPackets.cc  TournamentPackets.h
src/Network/Clients/: ClientSocket.cc  ClientSocket.h  Makefile.am
src/Network/Clients/Chat/: ChatPackets.cc  ChatPackets.h  ChatSocket.cc  ChatSocket.h  Makefile.am  mainChat.cc  mainRoot.cc
src/Network/Clients/Robot/: Makefile.am  RobotPackets.cc  RobotPackets.h  RobotSocket.cc  RobotSocket.h  mainRobot.cc
src/Network/Clients/common/: ClientSocket.cc  ClientSocket.h  Makefile.am
src/Network/Server/: Makefile.am  ServerChat_Conn.cc  ServerNetConnection.cc  ServerNetConnection.h  ServerPackets.cc  ServerPackets.h  ServerRobot_Conn.cc  ServerSocket.cc  ServerSocket.h
src/Network/common/: Makefile.am  NetConnection.cc  NetConnection.h  Packets.cc  Packets.h  SimpleProcess.h
src/Network/metaserver/: Makefile.am  MetaServerNetConnection.cc  MetaServerNetConnection.h  MetaServerPackets.cc  MetaServerPackets.h  MetaServerSocket.cc  MetaServerSocket.h
src/RobotClient/: Makefile.am  RobotClient.cc  RobotPacketFactory.cc
(+156 files in other folders)
