docsdir = $(DOCS_DIR)

docs_DATA = \
        RealTimeBattle-1.html RealTimeBattle-2.html RealTimeBattle-3.html \
        RealTimeBattle-4.html RealTimeBattle-5.html RealTimeBattle-6.html \
	RealTimeBattle.html next.gif prev.gif toc.gif RealTimeBattle.dvi \
	RealTimeBattle.info



#info_TEXINFOS = RealTimeBattle.texi

EXTRA_DIST = $(docs_DATA)  #$(info_TEXINFOS)

