
bin_PROGRAMS = Chat Root
INCLUDES = -I.. -I../.. -I../../..

Chat_SOURCES = ChatPackets.cc mainChat.cc

Chat_DEPENDENCIES = ../libRTBNetClients.a ../../libRTBNetwork.a ../../../libRTB.a
Chat_LDADD        = ../libRTBNetClients.a ../../libRTBNetwork.a ../../../libRTB.a 

Root_SOURCES = ChatPackets.cc mainRoot.cc

Root_DEPENDENCIES = ../libRTBNetClients.a ../../libRTBNetwork.a ../../../libRTB.a
Root_LDADD        = ../libRTBNetClients.a ../../libRTBNetwork.a ../../../libRTB.a 

